--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "taivu7.github.io",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://taivu7.github.io",
+  "homepage": "https://taivu.dev",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.7.0",
